live-prop-test-macros/tests/compile_fail/const_fn.stderr
error: live-prop-test doesn't support testing const fn items
 --> $DIR/const_fn.rs:4:1
  |
4 | const fn five() -> i32 {
  | ^^^^^
